@@ -128,6 +128,7 @@ function mtw.bashing_aliases()
  echo("\n flee: toggle bashing/fasthunting off and queue flee")
  mtw.disp_toggle("gathering", "tgg: toggle gathering gold and items")
  mtw.disp_toggle("generics", "gen: toggle generic/numeric targeting")
+ mtw.disp_toggle("ihbashing", "bih: toggle IH printing when bashing")
  echo("\n wbs: load mana wyrm bashing 'area'")
  echo("\n q X Y Z: manually load a prioritized target list of X, Y, and Z")
  echo("\n offr: check II CORPSE and then offer all the corpses you hold")
